Add public key done

--- a/chrome/css/content.less
+++ b/chrome/css/content.less
@@ -24,7 +24,7 @@
   }
 }
 
-.__pgp_pk_added, &:hover, &:focus {
+.__pgp_pk_added, .__pgp_pk_added:hover, .__pgp_pk_added:focus {
   cursor: not-allowed;
   background-image: none;
   opacity: 0.4;
