Begin admin reorg

--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -3,6 +3,12 @@
 @navHoverBg: #368;
 @navHoverFg: #fff;
 
+#container {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 nav {
   color: @navFg;
   background: @navBg;
