--- a/chrome/src/templates/admin/pub_import.html
+++ b/chrome/src/templates/admin/pub_import.html
@@ -1,7 +1,7 @@
 <div>
   <form name="importKeysForm" rv-on-submit="submit" class="pure-form pure-form-stacked">
     <fieldset>
-      <legend>Import a PGP key</legend>
+      <legend>Import a public PGP key</legend>
       <div class="pure-g" rv-show="error">
         <div class="pure-u-1 warning">{ error }</div>
       </div>
