--- a/chrome/src/templates/admin/view.html
+++ b/chrome/src/templates/admin/view.html
@@ -6,23 +6,5 @@
 
 <div rv-show="hasPrivateKey">
   <h1>Your PGP key</h1>
-  <table class="pure-table">
-    <tbody>
-      <tr>
-        <td>Fingerprint</td>
-        <td>{ fingerprint }</td>
-      </tr>
-      <tr>
-        <td>User IDs</td>
-        <td>
-          <ul>
-            <li rv-each-user="privateKey.userIds">{ userIds }</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2"><pre>{ armored }</pre></td>
-      </tr>
-    </tbody>
-  </table>
+  <pre rv-text="armored"></pre>
 </div>
