--- a/chrome/src/templates/admin/generate.html
+++ b/chrome/src/templates/admin/generate.html
@@ -1,30 +1,26 @@
-<div class="pure-g">
-  <div class="pure-u-2-5">
-    <form name="newKeysForm" rv-on-submit="submit" class="pure-form pure-form-aligned">
-      <fieldset>
-        <legend>Generate a new key pair</legend>
-        <div class="pure-control-group">
-          <div class="pure-control-group">
-            <label>Real Name:</label>
-            <input rv-value="name" placeholder="John Smith" required="yes" />
-          </div>
-          <div class="pure-control-group">
-            <label>Email:</label>
-            <input rv-value="email" type="email" placeholder="jsmith@example.com" required="yes" />
-          </div>
-          <div class="pure-control-group">
-            <label>Passphrase:</label>
-            <input rv-value="passphrase" type="password" required="yes" minlength="10" />
-          </div>
-          <div class="pure-control-group">
-            <label>Confirm passphrase:</label>
-            <input rv-value="confirm" type="password" required="yes" minlength="10" />
-          </div>
-          <div class="pure-control-group">
-            <button type="submit" rv-class-pure-button-disabled="spinner" class="pure-button pure-button-primary">Create</button>
-            <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
-          </div>
-      </fieldset>
-    </form>
-  </div>
-</div>
+<h1>Generate a new key pair</h1>
+<form name="newKeysForm" rv-on-submit="submit" class="pure-form pure-form-aligned">
+  <fieldset>
+    <div class="pure-control-group">
+      <div class="pure-control-group">
+        <label>Real Name:</label>
+        <input rv-value="name" placeholder="John Smith" required="yes" />
+      </div>
+      <div class="pure-control-group">
+        <label>Email:</label>
+        <input rv-value="email" type="email" placeholder="jsmith@example.com" required="yes" />
+      </div>
+      <div class="pure-control-group">
+        <label>Passphrase:</label>
+        <input rv-value="passphrase" type="password" required="yes" minlength="10" />
+      </div>
+      <div class="pure-control-group">
+        <label>Confirm passphrase:</label>
+        <input rv-value="confirm" type="password" required="yes" minlength="10" />
+      </div>
+      <div class="pure-control-group">
+        <button type="submit" rv-class-pure-button-disabled="spinner" class="pure-button pure-button-primary">Create</button>
+        <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
+      </div>
+  </fieldset>
+</form>
