--- a/chrome/src/templates/admin/pub_import.html
+++ b/chrome/src/templates/admin/pub_import.html
@@ -1,20 +1,17 @@
-<div>
-  <form name="importKeysForm" rv-on-submit="submit" class="pure-form pure-form-stacked">
-    <fieldset>
-      <legend>Import a public PGP key</legend>
-      <div class="pure-g" rv-show="error">
-        <div class="pure-u-1 warning">{ error }</div>
+<h1>Import someone's public key into your address book</h1>
+<form name="importKeysForm" rv-on-submit="submit" class="pure-form pure-form-stacked">
+  <fieldset>
+    <div class="pure-g" rv-show="error">
+      <div class="pure-u-1 warning">{ error }</div>
+    </div>
+    <div class="pure-control-group">
+      <div class="pure-control-group">
+        <label>Public key:</label>
+        <textarea rv-value="key" required="yes"></textarea>
       </div>
       <div class="pure-control-group">
-        <div class="pure-control-group">
-          <label>Public key:</label>
-          <textarea rv-value="key" required="yes"></textarea>
-        </div>
-        <div class="pure-control-group">
-          <button type="submit" class="pure-button pure-button-primary">Import</button>
-          <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
-        </div>
-    </fieldset>
-  </form>
-</div>
-
+        <button type="submit" class="pure-button pure-button-primary">Import</button>
+        <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
+      </div>
+  </fieldset>
+</form>
