Texts and CSS. Still bug in pub key search

--- a/chrome/src/templates/admin/pub_list.html
+++ b/chrome/src/templates/admin/pub_list.html
@@ -19,7 +19,7 @@
     <tr rv-each-key="foundKeys">
       <td>{ key.getPrimaryUser }</td>
       <td>{ key.fingerprint }</td>
-      <td><i class="fa fa-trash" rv-on-click="remove"></i></td>
+      <td><i class="fa fa-trash remove" rv-on-click="remove"></i></td>
     </tr>
   </tbody>
 </table>
