--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -50,7 +50,13 @@ article {
 }
 
 .tools {
+  width: 100%;
   margin-bottom: 20px;
+  clear: both;
+}
+
+.remove {
+  cursor: pointer;
 }
 
 .pull-right {
