Fixes and new font

--- a/chrome/src/templates/admin/generate.html
+++ b/chrome/src/templates/admin/generate.html
@@ -1,4 +1,4 @@
-<h1>Generate a new key pair</h1>
+<h1>Generate a new key</h1>
 <form name="newKeysForm" rv-on-submit="submit" class="pure-form pure-form-aligned">
   <fieldset>
     <div class="pure-control-group">
@@ -20,7 +20,7 @@
       </div>
       <div class="pure-control-group">
         <button type="submit" rv-class-pure-button-disabled="spinner" class="pure-button pure-button-primary">Create</button>
-        <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
+        <span rv-show="spinner"><i class="icon-cog spin"></i></span>
       </div>
   </fieldset>
 </form>
