--- a/chrome/src/templates/admin/remove.html
+++ b/chrome/src/templates/admin/remove.html
@@ -3,8 +3,12 @@
 recreate it, even if you used the same passphrase. You will not be able to read
 any messages encrypted for this key. If you made a backup of this key, then you
 will be able to import it later.</p>
-<div class="tools">
-  <button class="pure-button button-error button-xlarge" rv-on-click="doRemove">Remove</button>
-  <a class="pure-button pull-right" href="#/key/view">Cancel</a>
-</div>
 
+<div class="pure-g">
+  <div class="pure-u-1-3">
+    <button class="pure-button button-error button-xlarge" rv-on-click="doRemove">Remove</button>
+  </div>
+  <div class="pure-u-2-3">
+    <a class="pure-button pull-right" href="#/key/view">Cancel</a>
+  </div>
+</div>
