--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -49,10 +49,12 @@ article {
   }
 }
 
-.tools {
-  width: 100%;
-  margin-bottom: 20px;
-  clear: both;
+.well {
+  margin: 20px 0;
+}
+
+.set-center {
+  text-align: center;
 }
 
 .remove {
@@ -137,8 +139,10 @@ article {
 // Import
 form[name=importKeysForm] {
   textarea {
-    width: 400px;
+    width: 100%;
     height: 400px;
+    resize: no-resize;
+    font-family: monospace;
   }
 }
 
