--- a/chrome/src/templates/admin/view.html
+++ b/chrome/src/templates/admin/view.html
@@ -1,24 +1,30 @@
 <h1>My public key</h1>
 <div rv-hide="hasPrivateKey">
-  <p>You have not created or imported a private PGP key. Please choose the options below:</p>
-  <div class="tools">
+  <p><b>You have not created or imported a private PGP key.</b> You need a
+  private PGP key in order to begin sending and receiving encrypted messages.</p>
+  <p>You have two options: </p>
+  <div class="well set-center">
     <a href="#/key/generate" class="pure-button pure-button-primary button-xlarge">Create a new private key</a>
-    .. or ..
+    ... or ...
     <a href="#/key/import" class="pure-button button-secondary button-xlarge">Import a private key</a>
   </div>
 </div>
 
 <div rv-show="hasPrivateKey">
   <p>You are ready to receive encrypted messages. This is your public key. You
-  can copy it and send it to your friends.  <b>Note!</b> You can also send your
-  public key using the button in the browser action widget.  </p>
-  <div class="tools">
-    <button class="pure-button" rv-on-click="copyToClipboard">Copy to clipboard</button>
-    <a href="#/key/remove" class="pure-button button-error button-small pull-right">Delete</a>
+  can copy it and send it to your friends. <b>Note!</b> You can also send your
+  public key automatically from the browser action widget.  </p>
+  <div class="pure-g well">
+    <div class="pure-u-1-3">
+      <button class="pure-button" rv-on-click="copyToClipboard">Copy to clipboard</button>
+    </div>
+    <div class="pure-u-2-3">
+      <a href="#/key/remove" class="pure-button button-error button-small pull-right">Remove</a>
+    </div>
   </div>
   <pre rv-text="armored"></pre>
 </div>
 
-<div>
+<div class="well">
   What is PGP? Read the Wikipedia article on <a href="https://en.wikipedia.org/wiki/Pretty_Good_Privacy">Pretty Good Privacy</a>.
 </div>
