Update view key

--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -37,7 +37,7 @@ article {
   }
 }
 
-.pure-menu-link, .pure-menu-link:visited  {
+.round-link, .round-link:visited  {
   color: @navFg;
   background: @navBg;
   font-size: 1.2em;
