--- a/chrome/src/templates/admin/remove.html
+++ b/chrome/src/templates/admin/remove.html
@@ -1,4 +1,4 @@
-<h1>Confirm private key removal</h1>
+<h1>Confirm key removal</h1>
 <p><b>Warning!</b> Removing your key is irreversible. You will not be able to
 recreate it, even if you used the same passphrase. You will not be able to read
 any messages encrypted for this key. If you made a backup of this key, then you
