--- a/chrome/src/templates/admin/view.html
+++ b/chrome/src/templates/admin/view.html
@@ -1,4 +1,4 @@
-<h1>My public key</h1>
+<h1>My key</h1>
 <div rv-hide="hasPrivateKey">
   <p><b>You have not created or imported a private PGP key.</b> You need a
   private PGP key in order to begin sending and receiving encrypted messages.</p>
@@ -14,15 +14,17 @@
   <p>You are ready to receive encrypted messages. This is your public key. You
   can copy it and send it to your friends. <b>Note!</b> You can also send your
   public key automatically from the browser action widget.  </p>
-  <div class="pure-g well">
-    <div class="pure-u-1-3">
-      <button class="pure-button" rv-on-click="copyToClipboard">Copy to clipboard</button>
-    </div>
-    <div class="pure-u-2-3">
-      <a href="#/key/remove" class="pure-button button-error button-small pull-right">Remove</a>
-    </div>
+  <div>
+    <img src="images/key_share.png" width="360">
   </div>
-  <pre rv-text="armored"></pre>
+  <div class="pure-menu pure-menu-horizontal">
+      <ul class="pure-menu-list">
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link pure-button button-small copy" data-clipboard-target="#armored" rv-show="showingPublic">copy to clipboard</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link pure-button button-small" rv-on-click="toggle" rv-text="toggleText < showingPublic"></a></li>
+        <li class="pure-menu-item"><a href="#/key/remove" class="pure-menu-link pure-button button-small button-error">Remove</a></li>
+      </ul>
+  </div>
+  <pre id="armored" rv-text="armored < showingPublic"></pre>
 </div>
 
 <div class="well">
