--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -11,6 +11,11 @@ pre {
   background-color: #ffe;
   padding: 10px;
   border: 1px dotted #aaa;
+
+  &.export {
+    max-height: 600px;
+    word-wrap: break-word;
+  }
 }
 
 #container {
