--- a/chrome/src/templates/admin/advanced.html
+++ b/chrome/src/templates/admin/advanced.html
@@ -2,4 +2,8 @@
 
 <button class="pure-button" rv-on-click="doExport">Export</button>
 
-<pre rv-text="exported"></pre> 
+<div rv-show="exported">
+  <p>Please copy the data in the box below and save it in a text file on your computer.</p>
+  <button class="pure-button button-small copy" data-clipboard-target="#exported">copy to clipboard</button>
+  <pre id="exported" class="export" rv-show="exported" rv-text="exported"></pre>
+</div>
