Make browser password dialog shorter

--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -128,14 +128,16 @@ input[type=password] {
 .middle {
   display: table-cell;
   width: @mainWidth;
-  height: @mainHeight - @menuHeight;
   text-align: center;
   vertical-align: middle;
 }
 
+.short {
+  height: 150px;
+}
+
 #container {
   width: @mainWidth;
-  height: @mainHeight;
   display: block;
   background-color: @mainBg;
 }
