--- a/chrome/css/content.less
+++ b/chrome/css/content.less
@@ -2,7 +2,7 @@
 .__pgp_pk {
   display: inline-block;
   position: relative;
-  margin: 10px;
+  margin: 0;
   padding: 0 20px 0 30px;
   text-align: center;
   text-decoration: none;
