--- a/chrome/src/templates/admin/pub_list.html
+++ b/chrome/src/templates/admin/pub_list.html
@@ -10,7 +10,7 @@
     </form>
   </div>
   <div class="pure-u-2-3">
-    <a href="#/pub/import" class="pure-button pull-right">Import a key</a>
+    <a href="#/pub/import" class="pure-button pure-button-primary pull-right">Import a key</a>
   </div>
 </div>
 <table rv-show="hasFoundKeys < foundKeys" class="pure-table" width="100%">
