--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -6,8 +6,8 @@
 
 // Menu
 @menuHeight: 20px;
-@menuBg: #b9c9ed;
-@menuFg: #333;
+@menuBg: #acd6ff;
+@menuFg: #002270;
 @menuHover: #fff;
 
 // Logo
@@ -147,6 +147,7 @@ nav {
   height: @menuHeight;
   line-height: @menuHeight - 1;
   background-color: @menuBg;
+  border-bottom: 1px solid #aaa;
 
   .logo {
     font-size: 115%;
