--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -125,6 +125,10 @@ input[type=password] {
   background: rgb(202, 60, 60); /* this is a maroon */
 }
 
+.center {
+  text-align: center;
+}
+
 .middle {
   display: table-cell;
   width: @mainWidth;
