--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -192,12 +192,16 @@ nav {
   a {
     cursor: pointer;
     color: @menuFg;
-    border-bottom: 1px dashed @menuFg;
+    border-bottom: 1px dotted @menuFg;
     &:hover {
       color: lighten(@menuFg, 30%);
-      border-bottom: 1px dashed lighten(@menuFg, 30%);
+      border-bottom: 1px dotted lighten(@menuFg, 30%);
     }
   }
+}
+
+.weak {
+  color: #777;
 }
 
 // Address book tab
