--- a/chrome/src/templates/admin/view.html
+++ b/chrome/src/templates/admin/view.html
@@ -1,12 +1,12 @@
 <h1>My key</h1>
 <div rv-hide="hasPrivateKey">
-  <p><b>You have not created or imported a private PGP key.</b> You need a
-  private PGP key in order to begin sending and receiving encrypted messages.</p>
+  <p><b>You have not created or imported a PGP key.</b> You need a
+  PGP key in order to begin sending and receiving encrypted messages.</p>
   <p>You have two options: </p>
   <div class="well set-center">
-    <a href="#/key/generate" class="pure-button pure-button-primary button-xlarge">Create a new private key</a>
+    <a href="#/key/generate" class="pure-button pure-button-primary button-xlarge">Create a new key</a>
     ... or ...
-    <a href="#/key/import" class="pure-button button-secondary button-xlarge">Import a private key</a>
+    <a href="#/key/import" class="pure-button button-secondary button-xlarge">Import a key</a>
   </div>
 </div>
 
