--- a/chrome/src/templates/admin/preferences.html
+++ b/chrome/src/templates/admin/preferences.html
@@ -1,6 +1,6 @@
 <h1>Preferences</h1>
 
 <div class="pure-g">
-  <div class="pure-u-1-12"><input type="checkbox" rv-checked="allowGA" rv-on-change="toggleGA"/></div>
+  <div class="pure-u-1-12"><input type="checkbox" rv-checked="allowGoogleAnalytics" rv-on-change="toggleGoogleAnalytics"/></div>
   <div class="pure-u-11-12">Allow us to collect anonymous data on the use of this extension, so we can make it better.</div>
 </table>
