Remove prefs and replace with contact form

--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -27,7 +27,7 @@ pre {
 
 nav {
   border-bottom: 2px solid @navBg;
-  background: url(/images/browser24.png) no-repeat 1% 50%;
+  //background: url(/images/browser24.png) no-repeat 1% 50%;
 }
 
 article {
