--- a/chrome/src/templates/admin/preferences.html
+++ b/chrome/src/templates/admin/preferences.html
@@ -1,6 +1,4 @@
 <!--
-<h1>Preferences</h1>
-
 <div class="pure-g">
   <div class="pure-u-1-12"><input type="checkbox" rv-checked="allowCollectData" rv-on-change="toggleCollectData"/></div>
   <div class="pure-u-11-12">Collect and send bug reports automatically</div>
@@ -20,8 +18,7 @@
     </div>
     <div class="pure-control-group">
       <label for="subject">Message</label>
-      <textarea id="message" style="width:400px; height:200px;">
-      </textarea>
+      <textarea id="message" style="width:400px; height:200px;"></textarea>
     </div>
     <div class="pure-controls">
       <button type="submit" class="pure-button pure-button-primary">Submit</button>
