Back to preferences

--- a/chrome/src/templates/admin/preferences.html
+++ b/chrome/src/templates/admin/preferences.html
@@ -1,27 +1,5 @@
-<!--
+<h1>Preferences</h1>
 <div class="pure-g">
   <div class="pure-u-1-12"><input type="checkbox" rv-checked="allowCollectData" rv-on-change="toggleCollectData"/></div>
-  <div class="pure-u-11-12">Collect and send bug reports automatically</div>
+  <div class="pure-u-11-12">Collect and send bug and usage reports automatically</div>
 </div>
--->
-
-<form class="pure-form pure-form-aligned">
-  <fieldset>
-    <legend>Contact us</legend>
-    <div class="pure-control-group">
-      <label for="email">Your email</label>
-      <input id="email" type="email" placeholder="Email">
-    </div>
-    <div class="pure-control-group">
-      <label for="subject">Subject</label>
-      <input id="subject" type="text" placeholder="Subject">
-    </div>
-    <div class="pure-control-group">
-      <label for="subject">Message</label>
-      <textarea id="message" style="width:400px; height:200px;"></textarea>
-    </div>
-    <div class="pure-controls">
-      <button type="submit" class="pure-button pure-button-primary">Submit</button>
-    </div>
-  </fieldset>
-</form>
