--- a/chrome/src/templates/admin/preferences.html
+++ b/chrome/src/templates/admin/preferences.html
@@ -1,5 +1,5 @@
 <h1>Preferences</h1>
 <div class="pure-g">
   <div class="pure-u-1-12"><input type="checkbox" rv-checked="allowCollectData" rv-on-change="toggleCollectData"/></div>
-  <div class="pure-u-11-12">Collect and send bug and usage reports automatically</div>
+  <div class="pure-u-11-12">Collect and send anonymous bug and usage reports</div>
 </div>
