--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -140,6 +140,12 @@ input[type=password] {
   height: 150px;
 }
 
+#critical {
+  width: @mainWidth;
+  padding: 10px;
+  b { color: red; display: block; }
+}
+
 #container {
   width: @mainWidth;
   display: block;
