Add onerror handler in admin too

--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -18,6 +18,12 @@ pre {
   }
 }
 
+#critical {
+  width: 500px;
+  padding: 10px;
+  b { color: red; display: block; }
+}
+
 #container {
   margin-top: 10px;
   width: 600px;
