Add sticky notes

--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -126,7 +126,7 @@ article {
 //--------------------------------------------------------
 // Widgets
 //--------------------------------------------------------
-.warning, .info {
+.error, .warning, .info {
   padding: 1em;
   margin: 1em;
   color: #000;
@@ -139,6 +139,12 @@ article {
   color: #000;
   border-left: 3px solid #4e4;
   background: #dfd;
+}
+
+.warning {
+  color: #000;
+  border-left: 3px solid #f2c779;
+  background: #fff8c4;
 }
 
 .footnote {
