Add highlight to tables

--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -40,6 +40,10 @@ article {
   padding: 5px;
 }
 
+.pure-table tbody tr:hover {
+  background-color: #ffc;
+}
+
 .pure-menu-heading {
   margin-right: 10px;
   b {
