--- a/chrome/css/admin.less
+++ b/chrome/css/admin.less
@@ -166,3 +166,19 @@ form[name=importKeysForm] {
   }
 }
 
+ul.toggles {
+  list-style-type: none;
+  li {
+    line-height: 2em;
+
+    input {
+      width: 2em;
+      margin-right: 7px;
+      cursor: pointer;
+    }
+
+    label {
+      cursor: pointer;
+    }
+  }
+}
