--- a/chrome/src/templates/admin/preferences.html
+++ b/chrome/src/templates/admin/preferences.html
@@ -1,5 +1,11 @@
 <h1>Preferences</h1>
-<div class="pure-g">
-  <div class="pure-u-1-12"><input type="checkbox" rv-checked="allowCollectData" rv-on-change="toggleCollectData"/></div>
-  <div class="pure-u-11-12">Collect and send anonymous bug and usage reports</div>
-</div>
+<ul class="toggles">
+  <li>
+    <input id="c1" type="checkbox" rv-checked="enableKeybase" rv-on-change="toggle"/></dt>
+    <label for="c1">Allow browser popup to search for public keys in <a target="_new" href="https://keybase.io">Keybase</a></label>
+  </li>
+  <li>
+    <input id="c2" type="checkbox" rv-checked="allowCollectData" rv-on-change="toggle"/>
+    <label for="c2">Collect and send anonymous bug and usage reports</label>
+  </li>
+</ul>
