--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -6,9 +6,9 @@
 
 // Menu
 @menuHeight: 20px;
-@menuBg: #775D7F;
-@menuFg: #B7ABBA;
-@menuHover: #fff;
+@menuBg: #fff;
+@menuFg: #000;
+@menuHover: #002c91;
 
 // Article
 @articlePadding: 10px;
@@ -154,14 +154,13 @@ nav {
   background-color: @menuBg;
   border-bottom: 1px solid #aaa;
   color: @menuFg;
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.0) 40%, rgba(0, 0, 0, 0.2));
 
   .logo {
     font-size: 115%;
     text-decoration: none;
     font-variant: small-caps;
     padding: 0 5px;
-    color: #fff;
-    text-shadow: 1px 1px #000;
   }
 
   ul {
